# mailclient-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VERSION
MAIL/: CMakeLists.txt  IMAPClient.cpp  IMAPClient.h  MAILClient.cpp  MAILClient.h  POPClient.cpp  POPClient.h  SMTPClient.cpp  SMTPClient.h
TestMAIL/: CMakeLists.txt  CodeCoverage.cmake  main.cpp  template_test_conf.ini  test_utils.cpp  test_utils.h
